logs/Peregrine/job-16147866.log
  File "run_mlm.py", line 59
    model_name_or_path: Optional[str] = field(
                      ^
SyntaxError: invalid syntax


###############################################################################
Peregrine Cluster
Job 16147866 for user 's2964007'
Finished at: Sun Dec 13 23:02:01 CET 2020

Job details:
============

Job ID              : 16147866
Name                : BERT_Finetuning
User                : s2964007
Partition           : gpu
Nodes               : pg-gpu13
Number of Nodes     : 1
Cores               : 12
State               : FAILED
Submit              : 2020-12-13T23:01:18
Start               : 2020-12-13T23:01:54
End                 : 2020-12-13T23:02:01
Reserved walltime   : 01:00:00
Used walltime       : 00:00:07
Used CPU time       : --
% User (Computation): 71.43%
% System (I/O)      : 23.81%
Mem reserved        : 4000M/node
Max Mem used        : 0.00  (pg-gpu13)
Max Disk Write      : 0.00  (pg-gpu13)
Max Disk Read       : 0.00  (pg-gpu13)
Average GPU usage   : No GPU metrics available (pg-gpu13)


Acknowledgements:
=================

Please see this page for information about acknowledging Peregrine in your publications:

https://wiki.hpc.rug.nl/peregrine/additional_information/scientific_output

################################################################################
